bk_ida/gccida/g3/emit_insn_after
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_insn_after/src/emit-rtl.c:4410:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)v6[1].fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_insn_after/src/emit-rtl.c:4413:11: error: use of undeclared identifier 'rtx_def'
v3[1] = ( rtx_def)_mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v6, ( __m128i)( unsigned __int64)v7.rtwint); 
          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_insn_after/src/emit-rtl.c:4465:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( __int64)v6[2]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_insn_after/src/emit-rtl.c:4490:8: error: assigning to 'struct rtx_def' from incompatible type 'long long'
v16[3] = 0LL; 
       ^ ~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_insn_after/src/obj/emit-rtl.o] Error 1
